tree-sitter-trio/test/corpus/records.txt
================================================================================
Marker and scalar tags
================================================================================

name: fooBar
func
dis: "Foo Bar"
id: @p:demo:r:1234 "Foo"
count: 12kW
when: 2025-01-02
flag: T
plain: hello world

--------------------------------------------------------------------------------

(source_file
  (record
    (tag (name) (raw))
    (tag (name))
    (tag (name) (str))
    (tag (name) (ref))
    (tag (name) (number))
    (tag (name) (date))
    (tag (name) (bool))
    (tag (name) (raw))))

================================================================================
Two records with separator and comment
================================================================================

// first
a: 1
---
b: 2

--------------------------------------------------------------------------------

(source_file
  (comment)
  (record
    (tag (name) (number)))
  (separator)
  (record
    (tag (name) (number))))

================================================================================
Keyword prefix is raw, keyword alone is bool
================================================================================

name:falseToTrue
flag:false

--------------------------------------------------------------------------------

(source_file
  (record
    (tag (name) (raw))
    (tag (name) (bool))))
